# PointDCI

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSES.md  README.md  THIRD_PARTY.md
DCI/: .gitignore  CMakeLists.txt  README  process_new.sh
DCI/examples/minimal/: components.txt  config.json  segments.txt  variation.txt
DCI/module/: CMakeLists.txt
DCI/module/3rd/dkm/: dkm.hpp  dkm_parallel.hpp  dkm_utils.hpp
DCI/module/basic/: CMakeLists.txt
DCI/module/basic/include/: basic_types.h  component.h  pcl_compat.h  point_set.h  vertex_group.h
DCI/module/basic/src/: basic_types.cpp  component.cpp  point_set.cpp  vertex_group.cpp
DCI/module/cmake/: FindGUROBI.cmake
DCI/module/energyTerm/: CMakeLists.txt
DCI/module/energyTerm/include/: energyTerm.h
DCI/module/energyTerm/src/: energyTerm.cpp
DCI/module/evaluate/: CMakeLists.txt
DCI/module/evaluate/include/: evaluate.h
DCI/module/evaluate/src/: evaluate.cpp  main.cpp
DCI/module/generate/: CMakeLists.txt
DCI/module/generate/include/: generate.h
DCI/module/generate/src/: generate.cpp  main.cpp
DCI/module/optimization/: CMakeLists.txt
DCI/module/optimization/include/: basic_types.h  linear_program.h  linear_program_solver.h  optimization.h
DCI/module/optimization/src/: basic_types.cpp  linear_program_solver.cpp  linear_program_solver_GUROBI.cpp  optimization.cpp
DCI/src/: CMakeLists.txt  config.json  globInfo.cpp  globInfo.h  hel_2_config.json  main.cpp
DCI/tools/: addBBOXVG.py  cellJsonPly.py  cellSupportPoints.py  computeDCI.py  cosinePlus+.py  cosineSim.py  cosineSimiPlus.py  extractScalesSeg.py  gaussianNoise.py  kClusterEvalu.py  m_view.py  projectPoints2vg.py  samplePointsFPS.py  selectVG.py  silhouette.py  stability.py  structureDCI.py  vgColorfulPly.py  vgTensity.py  visualEvaluate.py  voxel.py  xyzIntensity.py
DCI/tools/samplePoints/: data_sampler.py  error.py  interactive_viewer.py
example/: README.md  composite_scene.ply.md  lans.ply.md  pisa.ply.md
pdpcFeature/: CMakeLists.txt  README.md  replicate.sh
pdpcFeature/app/: pdpcComputeMultiScaleFeatures.cpp  pdpcPostProcess.cpp  pdpcSegmentation.cpp
pdpcFeature/process/: compToDiagram.py  plyTOvg.py  postProcess.sh  preProcess.sh
pdpcFeature/src/PDPC/MultiScaleFeatures/: MultiScaleFeatures.cpp  MultiScaleFeatures.h
pdpcFeature/src/PDPC/PointCloud/: Loader.cpp  Loader.h
pointSample/: .gitignore  CMakeLists.txt  LICENSE  README.md
pointSample/cmake/: fetch_cxxopts.cmake
pointSample/src/: main.cpp
pointSample/src/core/: FPSSampler.cpp  FPSSampler.h  KDTree.cpp  KDTree.h  PointCloud.h
pointSample/src/downsampling/: Downsampler.cpp  Downsampler.h  OctreeDownsampler.cpp  OctreeDownsampler.h
pointSample/src/io/: ObjIO.cpp  ObjIO.h  PlyIO.cpp  PlyIO.h
pointSample/src/weighting/: ColorIntensityWeight.cpp  ColorIntensityWeight.h  ConsistencyStabilityWeight.cpp  ConsistencyStabilityWeight.h  ConsistencyWeight.cpp  ConsistencyWeight.h  CurvatureWeight.cpp  CurvatureWeight.h  DensityWeight.cpp  DensityWeight.h  PercentileGatedWeight.cpp  PercentileGatedWeight.h  StabilityWeight.cpp  StabilityWeight.h  UniformWeight.cpp  UniformWeight.h  WeightStrategy.cpp  WeightStrategy.h
pointSample/tests/: CMakeLists.txt
pointSample/tools/: c2m_stats.py
